[gd_scene load_steps=14 format=3 uid="uid://zombie_scene_123"]

[ext_resource type="Script" path="res://scripts/zombie.gd" id="1_zombie_script"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_zombie"]
radius = 0.5
height = 2.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_zombie"]
radius = 0.5
height = 2.0

[sub_resource type="SphereShape3D" id="SphereShape3D_detection"]
radius = 8.0

[sub_resource type="BoxShape3D" id="BoxShape3D_attack"]
size = Vector3(2, 2, 2)

[sub_resource type="BoxMesh" id="BoxMesh_arm"]
size = Vector3(0.3, 1.5, 0.3)

[sub_resource type="StandardMaterial3D" id="ArmMaterial_Green"]
albedo_color = Color(0, 1, 0, 1)
roughness = 0.8

[sub_resource type="StandardMaterial3D" id="ArmMaterial_Red"]
albedo_color = Color(1, 0, 0, 1)
roughness = 0.8

[sub_resource type="Animation" id="Animation_idle"]
resource_name = "idle"
length = 0.1
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LeftArm")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RightArm")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_attack"]
resource_name = "attack"
length = 0.8
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LeftArm")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1, 0.15, 1, -0.7854, 0, 0, 1, 0.4, 1, 1.5708, 0, 0, 1, 0.8, 1, 0, 0, 0, 1)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RightArm")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1, 0.15, 1, -0.7854, 0, 0, 1, 0.4, 1, 1.5708, 0, 0, 1, 0.8, 1, 0, 0, 0, 1)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_zombie"]
_data = {
"attack": SubResource("Animation_attack"),
"idle": SubResource("Animation_idle")
}

[node name="Zombie" type="CharacterBody3D"]
script = ExtResource("1_zombie_script")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_zombie")

[node name="LeftArm" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.7, 0.5, -0.3)
material_override = SubResource("ArmMaterial_Green")
mesh = SubResource("BoxMesh_arm")

[node name="RightArm" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.7, 0.5, -0.3)
material_override = SubResource("ArmMaterial_Green")
mesh = SubResource("BoxMesh_arm")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_zombie")

[node name="DetectionArea" type="Area3D" parent="."]

[node name="DetectionCollision" type="CollisionShape3D" parent="DetectionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("SphereShape3D_detection")

[node name="AttackRange" type="Area3D" parent="."]

[node name="AttackCollision" type="CollisionShape3D" parent="AttackRange"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)
shape = SubResource("BoxShape3D_attack")

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
target_position = Vector3(0, 0, -10)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_zombie")
}

[node name="WalkTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true
